staticmethodなどの説明を追加

--- a/prpy/python/7.class.ipynb
+++ b/prpy/python/7.class.ipynb
@@ -216,6 +216,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "メソッドはクラスに束縛されていることを除けば，関数と全く同じです．普通のメソッドは第一引数の`self`を必ず取るので，\n",
+    "\n",
+    "```py\n",
+    "self.variable = \"hoge\"\n",
+    "```\n",
+    "\n",
+    "のように，いずれかのメソッドの中でインスタンス変数を追加した場合，他のメソッドの中でも`self.variable`を参照することができます．普通の関数との違いはこれだけです．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### [問題]「hyper_beam」をメソッドとして実装しなさい．\n",
     "\n",
     "hyper_beamは「自分のmp $\\times$ 自分のattack - 相手のmp $\\times$ 相手のdefence」の分だけ相手にダメージを与える攻撃とします．"
@@ -359,6 +372,249 @@
    "source": [
     "class Elf():\n",
     "    ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## クラス変数\n",
+    "\n",
+    "インスタンス変数`self.variable`は，インスタンス毎に値を変えることができました．これに対して，同じクラスから生成されれば，どのインスタンスであっても同じ値をとってほしい変数がある場合，クラス変数として定義します．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "クラス変数\n",
+      "インスタンス変数1\n",
+      "クラス変数\n",
+      "インスタンス変数2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test:\n",
+    "    a = \"クラス変数\" # クラス変数はここに定義します．\n",
+    "    def __init__(self,x=\"インスタンス変数\"):\n",
+    "        self.x = x\n",
+    "\n",
+    "instance1 = Test(\"インスタンス変数1\")\n",
+    "instance2 = Test(\"インスタンス変数2\")\n",
+    "\n",
+    "print(instance1.a)\n",
+    "print(instance1.x)\n",
+    "\n",
+    "print(instance2.a)\n",
+    "print(instance2.x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "クラス変数は`クラス.クラス変数`に値を代入することで，更新することが可能です．更新するとどうなるか確認してみてください．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "クラス変数\n",
+      "インスタンス変数1\n",
+      "クラス変数\n",
+      "インスタンス変数2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test.a = \"クラス変数2\"\n",
+    "\n",
+    "print(instance1.a)\n",
+    "print(instance1.x)\n",
+    "\n",
+    "print(instance2.a)\n",
+    "print(instance2.x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "クラス変数への代入を行うと，そのクラスから作られた全てのインスタンスが持つクラス変数も更新されます．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## staticmethod\n",
+    "\n",
+    "staticmethodは，selfを受け取らないメソッドです．これは以下のような場合に使うと良いでしょう．\n",
+    "\n",
+    "1. 関数として定義しても良いけど，クラスの中に入れておいた方が収まりがいい場合\n",
+    "2. [継承クラスで動作が変わらない時](https://qiita.com/msrks/items/fdc9afd12effc2cba1bc)\n",
+    "\n",
+    "実際に使う場合には，以下のように，「メソッドの宣言の前の行に`@staticmethod`をつける」ことで行います．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "適当な文字列\n",
+      "適当\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Test2:\n",
+    "    a = \"クラス変数\" # クラス変数はここに定義します．\n",
+    "    def __init__(self,x=\"インスタンス変数\"):\n",
+    "        self.x = x\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def test_static():\n",
+    "        print(\"適当な文字列\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def test_static2(y):\n",
+    "        print(y)\n",
+    "\n",
+    "instance3 = Test2()\n",
+    "instance3.test_static()\n",
+    "instance3.test_static2(\"適当\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "メソッド，関数の上に`@hogehoge`と宣言することで関数の挙動を変えることができます．これを __デコレータ__ と呼びます．`@staticmethod`以外にもたくさんのデコレータがありますし，自分でデコレータを定義することも可能です．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## classmethod\n",
+    "\n",
+    "classmethodは，第一引数にインスタンス(self)の代わりにクラス自体(cls)を受け取るメソッドです．これは以下のような場合に使うと良いでしょう．\n",
+    "\n",
+    "1. クラス変数にだけアクセスする時\n",
+    "2. 継承クラスで動作を変えたい時\n",
+    "\n",
+    "実際に使う場合には，以下のように，「メソッドの宣言の前の行に`@classmethod`をつける」ことで行います．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Test3'>\n",
+      "クラス変数\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Test3' has no attribute 'x'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m instance4 \u001b[38;5;241m=\u001b[39m Test3()\n\u001b[1;32m     27\u001b[0m instance5 \u001b[38;5;241m=\u001b[39m Test3()\n\u001b[0;32m---> 28\u001b[0m \u001b[43minstance4\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtest_classmethod\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[26], line 18\u001b[0m, in \u001b[0;36mTest3.test_classmethod\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mcls\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39ma)\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mx\u001b[49m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Test3' has no attribute 'x'"
+     ]
+    }
+   ],
+   "source": [
+    "class Test3:\n",
+    "    a = \"クラス変数\" # クラス変数はここに定義します．\n",
+    "    def __init__(self,x=\"インスタンス変数\"):\n",
+    "        self.x = x\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def test_static():\n",
+    "        print(\"適当な文字列\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def test_static2(y):\n",
+    "        print(y)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def test_classmethod(cls):\n",
+    "        print(cls)\n",
+    "        print(cls.a)\n",
+    "        print(cls.x)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def update_classvariable(cls, new_a):\n",
+    "        cls.a = new_a\n",
+    "\n",
+    "    \n",
+    "\n",
+    "instance4 = Test3()\n",
+    "instance5 = Test3()\n",
+    "instance4.test_classmethod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`cls`はインスタンスではなくクラスが入っているため，インスタンス変数`x`を呼び出すことはできません．\n",
+    "\n",
+    "また，`cls.a`に代入することで，クラス変数の値を更新することも可能です．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "新しい値\n",
+      "新しい値\n"
+     ]
+    }
+   ],
+   "source": [
+    "instance4.update_classvariable(\"新しい値\")\n",
+    "\n",
+    "print(instance4.a)\n",
+    "print(instance5.a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [問題] 通常のメソッドの中でクラス変数を更新した場合，どのような挙動になるのか確認してみてください．"
    ]
   }
  ],
