--- a/prpy/algo/singlylinkedlist.ipynb
+++ b/prpy/algo/singlylinkedlist.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
    ],
    "source": [
     "# 動作チェック\n",
-    "linkedlist = LinkedList()\n",
+    "linkedlist = SinglyLinkedList()\n",
     "print(linkedlist)\n",
     "\n",
     "for i in range(10):\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -361,14 +361,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[85], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m linkedlist \u001b[38;5;241m=\u001b[39m LinkedList()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(linkedlist)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mlinkedlist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[76], line 57\u001b[0m, in \u001b[0;36mLinkedList.remove\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     53\u001b[0m     current \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mnext\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# リスト内に削除対象が存在しなかった場合\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 57\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLinkedList.remove(data): data not in LinkedList\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m linkedlist \u001b[38;5;241m=\u001b[39m SinglyLinkedList()\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(linkedlist)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mlinkedlist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 47\u001b[0m, in \u001b[0;36mSinglyLinkedList.remove\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     43\u001b[0m     current \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mnext\n\u001b[1;32m     45\u001b[0m \u001b[38;5;66;03m# リスト内に削除対象が存在しなかった場合\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLinkedList.remove(data): data not in LinkedList\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
       "\u001b[0;31mValueError\u001b[0m: LinkedList.remove(data): data not in LinkedList"
      ]
     }
    ],
    "source": [
-    "linkedlist = LinkedList()\n",
+    "linkedlist = SinglyLinkedList()\n",
     "print(linkedlist)\n",
     "linkedlist.remove(1)"
    ]
