章立てを修正

--- a/prpy/algo/euclidean_algorithm.ipynb
+++ b/prpy/algo/euclidean_algorithm.ipynb
@@ -8,9 +8,20 @@
     "\n",
     "「最大公約数を求める関数を実装しよう」\n",
     "\n",
-    "ユークリッドの互除法を使って、２つの数字から最大公約数を求める関数を作成しましょう！\n",
+    "ユークリッドの互除法を使って、２つの数字の最大公約数を求める関数を作成しましょう！\n",
     "\n",
-    "ユークリッドの互除法について知りたい場合は[このページ](https://ja.wikipedia.org/wiki/%E3%83%A6%E3%83%BC%E3%82%AF%E3%83%AA%E3%83%83%E3%83%89%E3%81%AE%E4%BA%92%E9%99%A4%E6%B3%95)のみを読んでアルゴリズムを理解し、プログラムを実装してください。"
+    "::::{admonition}【ユークリッドの互除法】\n",
+    ":class: note  \n",
+    "\n",
+    "ユークリッドの互除法は，二つの自然数の最大公約数を求める方法で，「世界最古のアルゴリズム」として知られています．\n",
+    "\n",
+    "【手順】\n",
+    "1. 2つの自然数(a>b)のうち、大きい数aを小さい数bで割る\n",
+    "2. 前の手順の除数bを前の手順の余りで割る\n",
+    "3. これを余りが 0 となるまで繰り返す\n",
+    "4. 余りが 0 のときの除数が最大公約数\n",
+    "\n",
+    "::::"
    ]
   },
   {
@@ -46,22 +57,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::::{admonition} 回答例\n",
-    ":class: dropdown, hint \n",
+    "## 実装例\n",
     "\n",
-    "\n",
-    "```py\n",
+    ":::{margin}\n",
+    "答えを見る前に自分で実装してみよう\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def euclidean_algorithm(a, b):\n",
     "    while a % b != 0:\n",
     "        c = a % b\n",
-    "        #a = b\n",
-    "        #b = c\n",
     "        a,b = b,c\n",
     "    return b\n",
+    "\n",
     "    \n",
-    "euclidean_algorithm(28, 20)\n",
-    "```\n",
-    "::::"
+    "euclidean_algorithm(28, 28)"
    ]
   }
  ],
