--- a/prpy/algo/factorial.ipynb
+++ b/prpy/algo/factorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [問題] 階乗\n",
+    "# [問題] 階乗\n",
     "\n",
     "「階乗を計算する関数を実装しよう」... [階乗とは](https://ja.wikipedia.org/wiki/%E9%9A%8E%E4%B9%97)\n",
     "\n",
@@ -55,27 +55,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::::{admonition} 回答例\n",
-    ":class: dropdown, hint \n",
+    "## 実装例\n",
     "\n",
-    "```py\n",
-    "def factorial(n):\n",
-    "    if n == 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return n * fact(n-1)\n",
-    "\n",
-    "factorial(5)\n",
-    "```\n",
-    "::::"
+    ":::{margin}\n",
+    "答えを見る前に自分で実装してみよう\n",
+    ":::\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n-1)\n",
+    "\n",
+    "factorial(5)"
+   ]
   },
   {
    "cell_type": "code",
