--- a/prpy/algo/palindrome_checker.ipynb
+++ b/prpy/algo/palindrome_checker.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "def palindrome_checker(sent:str)->bool:\n",
+    "def palindrome_checker(sentence:str)->bool:\n",
     "    ...\n",
     "\n",
     "print(\"たけやぶやけた\", palindrome_checker(\"たけやぶやけた\"))\n",
@@ -40,21 +40,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::::{admonition} 回答例\n",
-    ":class: dropdown, hint \n",
+    "## 解答例\n",
     "\n",
-    "```py\n",
-    "def palindrome_checker(sent:str)->bool:\n",
-    "    reversed_sent = \"\".join(list(reversed(sent)))\n",
-    "    if sent == reversed_sent:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False \n",
+    ":::{margin}\n",
+    "答えを見る前に自分で実装してみよう\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "【一番短い(?)解答例】"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "たけやぶやけた True\n",
+      "たけやぶやけたかな False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def palindrome_checker(sentence:str)->bool:\n",
+    "    return sentence == sentence[::-1]\n",
     "    \n",
-    "print(\"たけやぶやけた\", palindrome_checker(\"たけやぶやけた\"))\n",
-    "print(\"たけやぶやけたかな\", palindrome_checker(\"たけやぶやけたかな\"))\n",
-    "```\n",
-    "::::"
+    "input = \"たけやぶやけた\"\n",
+    "output = palindrome_checker(input)\n",
+    "print(input, output)\n",
+    "\n",
+    "\n",
+    "input = \"たけやぶやけたかな\"\n",
+    "output = palindrome_checker(input)\n",
+    "print(input, output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "【わかりやすい解答例】"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "たけやぶやけた True\n",
+      "たけやぶやけたかな False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def palindrome_checker(sentence:str)->bool:\n",
+    "    reversed_sentence = \"\"\n",
+    "    for w in sentence:\n",
+    "        reversed_sentence = w + reversed_sentence\n",
+    "    return sentence == reversed_sentence\n",
+    "    \n",
+    "input = \"たけやぶやけた\"\n",
+    "output = palindrome_checker(input)\n",
+    "print(input, output)\n",
+    "\n",
+    "\n",
+    "input = \"たけやぶやけたかな\"\n",
+    "output = palindrome_checker(input)\n",
+    "print(input, output)"
    ]
   }
  ],
