fix note blocks

--- a/prpy/algo/dtw.ipynb
+++ b/prpy/algo/dtw.ipynb
@@ -168,9 +168,9 @@
     "\n",
     "DTWでは，最終的に二つの系列の距離を求めます．この過程で$(s_0, t_0)$を始点，$(s_{|S|},t_{|T|})$を終点に，この二点をつなげるコストの低いパスを見つけます．このコストを作成する関数を作成しましょう．\n",
     "\n",
-    "::::{admonition}【コスト行列作成のための前提条件】\n",
-    ":class: note\n",
+    "::::{note}\n",
     "\n",
+    "【コスト行列作成のための前提条件】\n",
     "\n",
     "- cost行列は$|S|\\times|T|$の行列になります．\n",
     "- cost行列の各要素は，__値が小さい方が良い__ ので，初期化の際には inf で埋めます．\n",
@@ -178,50 +178,6 @@
     "- 「終点のコスト」はDTWにおいて系列$S$と$T$の距離を表します．\n",
     "\n",
     "::::"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "距離行列を作成します．\n",
-    "```python\n",
-    "def dtw(x,y, distance=distance):\n",
-    "    # initialization\n",
-    "    D = distance(x,y)\n",
-    "```\n",
-    "\n",
-    "cost行列は$|S|\\times|T|$の行列になります．\n",
-    "cost行列の各要素は，__値が小さい方が良い__ ので，初期化の際には inf で埋めます．  \n",
-    "また，始点は「これまでの経路」が存在しないので，$d(s_0, t_0)$をそのまま利用します．\n",
-    "\n",
-    "```py\n",
-    "    cost = np.full_like(D,np.inf)\n",
-    "    cost[0,0] = D[0,0]\n",
-    "```\n",
-    "\n",
-    "始点以外のコスト行列を更新するために，系列$S$と$T$の全ての要素を舐めるための二重ループを行います．ただし，始点（$i=0$かつ$j=0$）の場合は既にコストが代入されているので，`continue`でこのステップ（jについてのループの内部で行う処理）を飛ばします．\n",
-    "\n",
-    "```py\n",
-    "    # udpate dtw cost matrix\n",
-    "    for i in range(x.size):\n",
-    "        for j in range(y.size):\n",
-    "            if i == 0 and j == 0:\n",
-    "                continue\n",
-    "```\n",
-    "\n",
-    "今見ている$i,j$について，コストを更新します．そのために，コスト計算に必要な要素をまとめて（`_window`にタプルとしてまとめて代入しています），この中の最小値を計算します．  \n",
-    "また，$i,j$に対応する距離を取り出します．この二つの値を足すことで，$i,j$に対応するコストが求まります．最後は終点のコストと，ここまでで作成したコスト行列を返して終了です．\n",
-    "\n",
-    "```py\n",
-    "            _window = cost[i-1, j], cost[i,j-1], cost[i-1,j-1]\n",
-    "            cost[i,j] = D[i,j] + np.min(_window)\n",
-    "    return cost[-1,-1],cost\n",
-    "```\n",
-    "このプログラムだと条件分けしていないので，continue後の初回にcost[-1,1],cost[0,0],cost[-1,0]を探索することになってしまいます．costは今見ている$(i,j)$地点以前の近傍をもとに計算するはずなので，このプログラムは不必要な所の値をチェックしていることになります．しかし，これら三つのコストは初期状態では必ずinfを持っているので，問題はありません．\n",
-    "\n",
-    "\n",
-    "「終点のコスト」はDTWにおいて系列$S$と$T$の距離を表します．"
    ]
   },
   {
@@ -269,12 +225,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### この関数の細かい説明"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "距離行列を作成します．\n",
+    "```python\n",
+    "def dtw(x,y, distance=distance):\n",
+    "    # initialization\n",
+    "    D = distance(x,y)\n",
+    "```\n",
+    "\n",
+    "cost行列は$|S|\\times|T|$の行列になります．\n",
+    "cost行列の各要素は，__値が小さい方が良い__ ので，初期化の際には inf で埋めます．  \n",
+    "また，始点は「これまでの経路」が存在しないので，$d(s_0, t_0)$をそのまま利用します．\n",
+    "\n",
+    "```py\n",
+    "    cost = np.full_like(D,np.inf)\n",
+    "    cost[0,0] = D[0,0]\n",
+    "```\n",
+    "\n",
+    "始点以外のコスト行列を更新するために，系列$S$と$T$の全ての要素を舐めるための二重ループを行います．ただし，始点（$i=0$かつ$j=0$）の場合は既にコストが代入されているので，`continue`でこのステップ（jについてのループの内部で行う処理）を飛ばします．\n",
+    "\n",
+    "```py\n",
+    "    # udpate dtw cost matrix\n",
+    "    for i in range(x.size):\n",
+    "        for j in range(y.size):\n",
+    "            if i == 0 and j == 0:\n",
+    "                continue\n",
+    "```\n",
+    "\n",
+    "今見ている$i,j$について，コストを更新します．そのために，コスト計算に必要な要素をまとめて（`_window`にタプルとしてまとめて代入しています），この中の最小値を計算します．  \n",
+    "また，$i,j$に対応する距離を取り出します．この二つの値を足すことで，$i,j$に対応するコストが求まります．最後は終点のコストと，ここまでで作成したコスト行列を返して終了です．\n",
+    "\n",
+    "```py\n",
+    "            _window = cost[i-1, j], cost[i,j-1], cost[i-1,j-1]\n",
+    "            cost[i,j] = D[i,j] + np.min(_window)\n",
+    "    return cost[-1,-1],cost\n",
+    "```\n",
+    "このプログラムだと条件分けしていないので，continue後の初回にcost[-1,1],cost[0,0],cost[-1,0]を探索することになってしまいます．costは今見ている$(i,j)$地点以前の近傍をもとに計算するはずなので，このプログラムは不必要な所の値をチェックしていることになります．しかし，これら三つのコストは初期状態では必ずinfを持っているので，問題はありません．\n",
+    "\n",
+    "\n",
+    "「終点のコスト」はDTWにおいて系列$S$と$T$の距離を表します．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 波形同士のアライメント（warping path）\n",
     "\n",
     "ここで作成したコスト行列から，$(0,0)$地点から$(|S|,|T|)$地点までの最短経路を見つけることができます．\n",
     "\n",
-    "::::{admonition}【最短経路を見つけるためのルール】\n",
-    ":class: note\n",
+    "::::{note}\n",
+    "\n",
+    "【最短経路を見つけるためのルール】\n",
+    "\n",
     "\n",
     "1. $(i,j)$は$(0,0)$からスタートします．\n",
     "2. $(i,j)$から次の場所に移動する場所は$(i+1,j)$，$(i,j+1)$，$(i+1,j+1)$の3点の内でコストが最小のものにします．\n",
@@ -352,13 +361,10 @@
    "source": [
     "ここまで「最短経路」と呼んでいたものは，波形同士のアライメント（warping path）が描く経路のことです．\n",
     "\n",
-    "::::{hint}アライメント\n",
     "\n",
     "> アライメントもしくはアラインメント（英: alignment）は、並べる、整列、比較などの意味。転じて以下の意味で使用する。\n",
     ">\n",
     "> 引用：[アライメント - Wikipedia](https://ja.wikipedia.org/wiki/%E3%82%A2%E3%83%A9%E3%82%A4%E3%83%A1%E3%83%B3%E3%83%88)\n",
-    "\n",
-    "::::\n",
     "\n",
     "\n",
     "二つの系列データが同じ系列長でない場合は単純に同じ地点同士の距離を計算するだけでは系列同士の距離を求めることはできませんでした．そのために，二つの系列データのどことどこの距離を計算すればいいのかを決める必要がありました．これがここでアライメントと呼ばれているものです．"
