参考文献の追加など

--- a/prpy/references.bib
+++ b/prpy/references.bib
@@ -1,4 +1,21 @@
 
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@INCOLLECTION{2022-kc,
+  title     = "窮理の部屋191 フィボナッチ数列",
+  booktitle = "月刊うちゅう",
+  author    = "長谷川, 能三",
+  editor    = "{大阪市立科学館}",
+  publisher = "大阪市立科学館",
+  volume    =  39,
+  pages     = "12",
+  series    =  5,
+  month     =  aug,
+  year      =  2022,
+  language  = "Japanese",
+  isbn      = "13462385"
+}
+
 @INPROCEEDINGS{Arjovsky2017-ad,
   title     = "{W}asserstein Generative Adversarial Networks",
   booktitle = "Proceedings of the 34th International Conference on Machine
