参考文献の整理と解説を追加（引用しただけ）

--- a/prpy/algo/dtw.ipynb
+++ b/prpy/algo/dtw.ipynb
@@ -20,21 +20,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> DTWについては歴史が古く様々な記事でわかりやすく説明されています．簡単に説明すると，以下のステップで構成されるアルゴリズムである．\n",
-    "> \n",
-    "> 1. 2つの時系列データ$X = \\{x_0, x_1, .., x_m\\}$,と$Y = \\{y_0, y_1, .., y_n\\}$を用意する．\n",
-    "> 2. 各点について総当たりで距離(2乗誤差や絶対誤差など)を計算し、行が$X$，列が$Y$，要素が点同士の距離となる行列$D$を作成する．\n",
-    "> 3. $D[0][0]$から$D[m][n]$までのパスの内，通る行列の要素の合計が最小となるパス(=Warping Path)を探索する．その最小となるパスの要素の合計がDTW距離である．\n",
-    "> \n",
-    "> これを実現するために動的計画法を用いて計算すると効率が良いアルゴリズムである．この場合この場合$D[m][n]$の要素がDTW距離である．\n",
-    "> \n",
-    "> 引用：[Go言語で動的時間伸縮法(Dynamic-Time-Warping)を実装しpython3から呼び出せるようにした #Python3 - Qiita](https://qiita.com/KaijiS/items/13ffda7f2490ed879e52)"
+    "::::{admonition} DTWの計算方法\n",
+    ":class: note\n",
+    "\n",
+    "\n",
+    "1. 2 つの時系列の各点の距離(データの次元にもよるが、今回は絶対値)を計算した(コスト)行列を作成\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "& \\text { time series } T: t_0, t_1, \\ldots, t_N, \\\\\n",
+    "& \\text { time series } S: s_0, s_1, \\ldots, s_M \\text {, } \\\\\n",
+    "& \\boldsymbol{W}:=(\\delta(i, j)) \\\\\n",
+    "& \\text { where } \\delta\\left(t_i, s_j\\right):=\\left|t_i-s_j\\right|, i \\in\\{0,1, \\ldots, N\\}, j \\in\\{0,1, \\ldots, M\\} \\\\\n",
+    "&\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "2. この行列上を $(0,0)$ から $(\\mathrm{N}, \\mathrm{M})$ を通るパスで単調性増加性を満たすものを考える。\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{r}\n",
+    "\\text { path } \\tau: \\tau(0)=(0,0), \\tau(1), \\ldots, \\tau(p)=\\left(p_i, p_j\\right), \\ldots, \\tau(K), \\\\\n",
+    "\\text { where } p_i \\in\\{0,1, \\ldots, N\\}, p_j \\in\\{0,1, \\ldots, M\\} .\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "　　　　特に、このpath $\\tau$ で単調性増加性を満たすようなものを考える。\n",
+    "\n",
+    "$$\n",
+    "\\tau(p) \\leq \\tau(q) \\Longleftrightarrow{ }^{\\text {def }} p_i \\leq q_i \\text { or } p_j \\leq q_j \\text {. if } p \\leq q \\text {, then } \\tau(p) \\leq \\tau(q) .\n",
+    "$$\n",
+    "\n",
+    "3. この pathが通る行列 $\\boldsymbol{W}$ の要素の和で最少となる値をDTWのコストとする。\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\operatorname{cost}(\\tau) & :=\\sum_p \\delta\\left(p_i, p_j\\right) \\\\\n",
+    "\\operatorname{Dist}(T, S) & :=\\min _\\tau \\operatorname{cost}(\\tau)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "> 引用：[時系列データを比較する方法-Derivative DTW, DTW- #Python - Qiita | @tee_shizuoka](https://qiita.com/tee_shizuoka/items/2ac9e6eda39664ca8345)\n",
+    "\n",
+    "::::"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::::{admonition} 疑似コード\n",
+    ":class: note\n",
+    "\n",
     "このDTWについてはWikipediaにわかりやすい疑似コードが載っています．\n",
     "\n",
     "```c\n",
@@ -57,6 +94,8 @@
     "}\n",
     "```\n",
     "> 出典：[Dynamic time warping - Wikipedia](https://en.wikipedia.org/wiki/Dynamic_time_warping)\n",
+    "\n",
+    "::::\n",
     "\n",
     "今回はこれをPythonで実装してみましょう．"
    ]
@@ -171,9 +210,8 @@
     "\n",
     "DTWでは，最終的に二つの系列の距離を求めます．この過程で$(s_0, t_0)$を始点，$(s_{|S|},t_{|T|})$を終点に，この二点をつなげるコストの低いパスを見つけます．このコストを作成する関数を作成しましょう．\n",
     "\n",
-    "::::{note}\n",
-    "\n",
-    "【コスト行列作成のための前提条件】\n",
+    "::::{admonition} コスト行列作成のための前提条件\n",
+    ":class: note\n",
     "\n",
     "- cost行列は$|S|\\times|T|$の行列になります．\n",
     "- cost行列の各要素は，__値が小さい方が良い__ ので，初期化の際には inf で埋めます．\n",
@@ -283,9 +321,8 @@
     "\n",
     "ここで作成したコスト行列から，$(0,0)$地点から$(|S|,|T|)$地点までの最短経路を見つけることができます．\n",
     "\n",
-    "::::{note}\n",
-    "\n",
-    "【最短経路を見つけるためのルール】\n",
+    "::::{admonition} 最短経路を見つけるためのルール\n",
+    ":class: note\n",
     "\n",
     "\n",
     "1. $(i,j)$は$(0,0)$からスタートします．\n",
@@ -472,8 +509,24 @@
     "\n",
     "## 参考文献\n",
     "\n",
-    "1.  [Dynamic Time Warping（動的時間伸縮法）](https://haripo.com/articles/2017/dynamic-time-warping )"
+    "1. [Dynamic Time Warping（動的時間伸縮法）- haripo.com](https://haripo.com/articles/2017/dynamic-time-warping )\n",
+    "2. [Go言語で動的時間伸縮法(Dynamic-Time-Warping)を実装しpython3から呼び出せるようにした #Python3 - Qiita](https://qiita.com/KaijiS/items/13ffda7f2490ed879e52)\n",
+    "3. [Dynamic time warping - Wikipedia](https://en.wikipedia.org/wiki/Dynamic_time_warping)\n",
+    "4. [アライメント - Wikipedia](https://ja.wikipedia.org/wiki/%E3%82%A2%E3%83%A9%E3%82%A4%E3%83%A1%E3%83%B3%E3%83%88)\n",
+    "5. [時系列データを比較する方法-Derivative DTW, DTW- #Python - Qiita | @tee_shizuoka](https://qiita.com/tee_shizuoka/items/2ac9e6eda39664ca8345)\n",
+    "6. [DTWで長さの違う波形を比較しよう！ - YouTube](https://www.youtube.com/watch?v=7sWtbayTUA0&ab_channel=K_DM%E3%80%90%E6%A9%9F%E6%A2%B0%E5%AD%A6%E7%BF%92xPython%E3%80%91)\n",
+    "7. [An introduction to Dynamic Time Warping](https://rtavenar.github.io/blog/dtw.html)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
