参考文献の追加など

--- a/prpy/algo/euclidean_algorithm.ipynb
+++ b/prpy/algo/euclidean_algorithm.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "ユークリッドの互除法を使って、２つの数字の最大公約数を求める関数を作成しましょう！\n",
     "\n",
-    "::::{admonition}【ユークリッドの互除法】\n",
-    ":class: note  \n",
+    "::::{admonition} ユークリッドの互除法\n",
+    ":class: note\n",
     "\n",
     "ユークリッドの互除法は，二つの自然数の最大公約数を求める方法で，「世界最古のアルゴリズム」として知られています．\n",
     "\n",
@@ -95,6 +95,23 @@
     "    \n",
     "euclidean_algorithm(28, 28)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 参考文献\n",
+    "\n",
+    "\n",
+    "### Web\n",
+    "1. [ユークリッドの互除法 -- 基礎数学演義３・第 2 回 (2024 年 4 月 16 日) | 和久井道久](https://www2.itc.kansai-u.ac.jp/~wakui/abs02BME3_2024.pdf)\n",
+    "2. [高校数学の復習 ユークリッドの互除法 | 山形大学大学院理工学研究科廣瀬研究室](https://fhirose.yz.yamagata-u.ac.jp/img/file868.pdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
