--- a/prpy/algo/fizzbuzz.ipynb
+++ b/prpy/algo/fizzbuzz.ipynb
@@ -10,15 +10,18 @@
     "fizzbuzzを行う関数を実装しましょう。\n",
     "Fizz Buzzについては[wikiを参照](https://ja.wikipedia.org/wiki/Fizz_Buzz)してください。\n",
     "\n",
-    ":::{note}\n",
-    "【Fizz-Buzzのルール】\n",
+    "::::{admonition} Fizz-Buzzのルール\n",
+    ":class: note\n",
+    "\n",
     "1からスタートして`max_number`（例えば30とか）まで，以下の処理を繰り返します．\n",
     "1. 3の倍数のとき，`fizz`と表示します．\n",
     "2. 5の倍数のとき，`buzz`と表示します．\n",
     "3. 3と5の公倍数（15の倍数）のとき，`fizzbuzz`と表示します．\n",
     "4. 1〜3に当てはまらない時，数字を表示します．\n",
     "\n",
-    ":::\n",
+    "\n",
+    "::::\n",
+    "\n",
     "\n",
     "関数の雛形として、以下を用意しました。\n",
     "```python\n",
