--- a/prpy/algo/singlylinkedlist.ipynb
+++ b/prpy/algo/singlylinkedlist.ipynb
@@ -22,7 +22,12 @@
     "![リストの例 - 3つの整数値からなる線形リスト](https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Singly-linked-list.svg/2880px-Singly-linked-list.svg.png)\n",
     "\n",
     "Pythonではポインターを直接扱うことはないので，これを実装するならばC言語のようなポインターを直接扱えるプログラミング言語の方が適切かもしれません．（しかし）ここでは簡単のためにPythonのクラスを使って実装していきます．  \n",
-    "リストの構成要素を`Node`クラス，リスト自体を`SinglyLinkedList`クラスで実装します．"
+    "リストの構成要素を`Node`クラス，リスト自体を`SinglyLinkedList`クラスで実装します．\n",
+    "\n",
+    "::::{margin}\n",
+    "以降のプログラムは[連結リストを学ぶ -Python- #Python - Qiita](https://qiita.com/tsudaryo1715/items/12c4848028716ab015bb)のプログラムを参考にしています．大方同じです．\n",
+    "\n",
+    "::::"
    ]
   },
   {
@@ -66,7 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::::{note}\n",
+    "::::{admonition} \\__str__メソッド\n",
+    ":class: hint\n",
+    "\n",
     "`__str__`は`print`関数にこのインスタンスを渡した時に表示される文字列を変更するための特殊なメソッドです．\n",
     "\n",
     "`__str__`がない場合はクラスの名前とメモリ番地が表示されます．\n",
@@ -104,10 +111,17 @@
     "    def tail(self):\n",
     "        if self.head is None:\n",
     "            return None\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "::::{admonition} headとtailプロパティ\n",
+    ":class: note\n",
     "\n",
-    "::::{note}\n",
-    "【headとtailプロパティ】  \n",
+    "\n",
     "`self.head`はリストが空の場合は`None`を持ちます．また，`self.head is None`ならば末尾も同様に`None`なので，末尾要素を返す`tail`プロパティも追加しておきます．ここで`tail`をインスタンス変数ではなくプロパティとして宣言したのは，この方がこの次のappendメソッドの実装時に都合が良いからです．\n",
     "\n",
     "::::"
@@ -121,7 +135,9 @@
     "\n",
     "リストの末尾に新しいノードを追加するappendメソッドを実装します．\n",
     "\n",
-    "::::{note}\n",
+    "::::{admonition} appendメソッド\n",
+    ":class: note\n",
+    "\n",
     "【appendメソッド】  \n",
     "1. もしも`self.head is None`（先頭要素が空）ならば，先頭要素に直接新しいノードを登録します．\n",
     "2. 先頭が空でなければ末尾要素に新しいノードを登録します．\n",
@@ -167,8 +183,9 @@
     "## 要素の削除（remove）\n",
     "任意の値を持ったノードをリストから削除する`remove`メソッドを実装します．  \n",
     "\n",
-    "::::{note}  \n",
-    "【removeメソッド】  \n",
+    "::::{admonition} removeメソッド\n",
+    ":class: note\n",
+    "  \n",
     "ここでは評価対象ノード`current`と，今の評価対象ノードの一つ前のノード`previous`を，リストの先頭から一つづつずらしながら，「`current`が削除対象か」をチェックしていきます．\n",
     "- 「`current`が削除対象」ならば前ノードのポインター`previous.next`を評価対象の次のノードに指定します．\n",
     "- ただし，「先頭要素が削除対象」ならば`previous`は空なので，`self.head`を直接「評価対象の次のノード」で上書きします．\n",
@@ -371,6 +388,19 @@
     "linkedlist = SinglyLinkedList()\n",
     "print(linkedlist)\n",
     "linkedlist.remove(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 参考文献\n",
+    "\n",
+    "1. [連結リストを学ぶ -Python- #Python - Qiita](https://qiita.com/tsudaryo1715/items/12c4848028716ab015bb)\n",
+    "1. [連結リスト - Wikipedia](https://ja.wikipedia.org/wiki/%E9%80%A3%E7%B5%90%E3%83%AA%E3%82%B9%E3%83%88)\n",
+    "1. [連結リスト - http://ysserve.wakasato.jp/](http://ysserve.wakasato.jp/sugsi/Lecture/c2/e_07-02-01.html#:~:text=%E7%B7%9A%E5%BD%A2%E3%83%AA%E3%82%B9%E3%83%88%E3%81%A8%E3%81%AF%E5%90%8C%E3%81%98,%E3%81%AA%E3%81%84%E3%81%A8%E3%81%84%E3%81%91%E3%81%BE%E3%81%9B%E3%82%93%E3%80%82)\n",
+    "1. [うさぎでもわかる配列と連結リスト | 工業大学生ももやまのうさぎ塾](https://www.momoyama-usagi.com/entry/info-algo-list)\n",
+    "1. [配列と連結リスト｜アルゴリズム、データ構造の基本](https://zenn.dev/masahiro_toba/books/436c018f5cd4e2/viewer/af0195)\n"
    ]
   },
   {
